# Homegear-Nanoleaf

./: -H  .project  CMakeLists.txt  README.md  configure.ac  makeRelease.sh
debian/: changelog  control  copyright  postinst  postrm  rules
misc/Config Directory/: nanoleaf.conf
misc/Device Description Files/: Aurora.xml
misc/Device Description Files/l10n/en-US/: Aurora.xml
misc/UI Translations/de-DE/: admin.de-DE.yaml
misc/UI Translations/en-US/: admin.en-US.yaml
src/: Factory.cpp  Factory.h  GD.cpp  GD.h  Makefile.am  Nanoleaf.cpp  Nanoleaf.h  NanoleafCentral.cpp  NanoleafCentral.h  NanoleafPacket.cpp  NanoleafPacket.h  NanoleafPeer.cpp  NanoleafPeer.h  PacketManager.cpp  PacketManager.h
